# Bank_Data_Analysis

./: .env_template  .flake8  README.md  pyproject.toml  records
data/: operations.xlsx  results.txt  ~$operations.xlsx
src/: TEST.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
