[tool.poetry]
name = "bank-ad"
version = "0.1.0"
description = ""
authors = ["Andrei Tihomirov <moon200505@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.1.3"
pandas = "^2.3.1"
openpyxl = "^3.1.5"
requests = "^2.32.4"
dotenv = "^0.9.9"
certifi = "^2025.7.9"
types-requests = "^2.32.4.20250611"
pandas-stubs = "^2.3.0.250703"


[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
